[project]
name = "week-project-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faiss-cpu>=1.14.3",
    "gradio>=6.20.0",
    "ipykernel>=7.3.0",
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "openrouter>=0.11.11",
    "pandas>=3.0.3",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.6.0",
]
